baml_language/crates/baml_tests/snapshots/compiles/patterns_class_destructure_namespaces/baml_tests__compiles__patterns_class_destructure_namespaces__01_lexer__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "DestructureQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Equals "="
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "41"
RBrace "}"
Semicolon ";"
Let "let"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "score"
RBrace "}"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
Equals "="
Word "response"
Semicolon ";"
Word "score"
RBrace "}"
Function "function"
Word "DestructureQualifiedMatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Equals "="
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "42"
RBrace "}"
Semicolon ";"
Match "match"
LParen "("
Word "response"
RParen ")"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "score"
Colon ":"
IntegerLiteral "0"
RBrace "}"
FatArrow "=>"
IntegerLiteral "0"
Comma ","
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "score"
Colon ":"
Let "let"
Word "matched"
RBrace "}"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
FatArrow "=>"
Word "matched"
RBrace "}"
RBrace "}"
Function "function"
Word "DestructureNamespaceQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Equals "="
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "45"
RBrace "}"
Semicolon ";"
Let "let"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "score"
RBrace "}"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
Equals "="
Word "response"
Semicolon ";"
Word "score"
RBrace "}"
Function "function"
Word "DestructureNamespaceQualifiedMatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Equals "="
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "46"
RBrace "}"
Semicolon ";"
Match "match"
LParen "("
Word "response"
RParen ")"
LBrace "{"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "score"
Colon ":"
IntegerLiteral "0"
RBrace "}"
FatArrow "=>"
IntegerLiteral "0"
Comma ","
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "score"
Colon ":"
Let "let"
Word "matched"
RBrace "}"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
FatArrow "=>"
Word "matched"
RBrace "}"
RBrace "}"
Function "function"
Word "TypePatternQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
Equals "="
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "43"
RBrace "}"
Semicolon ";"
Word "response"
Dot "."
Word "score"
RBrace "}"
Function "function"
Word "TypePatternQualifiedMatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Equals "="
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "44"
RBrace "}"
Semicolon ";"
Match "match"
LParen "("
Word "response"
RParen ")"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
FatArrow "=>"
Word "response"
Dot "."
Word "score"
RBrace "}"
RBrace "}"
Function "function"
Word "TypePatternNamespaceQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
Equals "="
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "47"
RBrace "}"
Semicolon ";"
Word "response"
Dot "."
Word "score"
RBrace "}"
Function "function"
Word "TypePatternNamespaceQualifiedMatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "response"
Equals "="
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
Comma ","
Word "score"
Colon ":"
IntegerLiteral "48"
RBrace "}"
Semicolon ";"
Match "match"
LParen "("
Word "response"
RParen ")"
LBrace "{"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Response"
FatArrow "=>"
Word "response"
Dot "."
Word "score"
RBrace "}"
RBrace "}"
Function "function"
Word "GenericDestructureQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "boxed"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
Equals "="
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
IntegerLiteral "49"
RBrace "}"
Semicolon ";"
Let "let"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
LBrace "{"
Word "value"
RBrace "}"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
Equals "="
Word "boxed"
Semicolon ";"
Word "value"
RBrace "}"
Function "function"
Word "GenericDestructureNamespaceQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "boxed"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
Equals "="
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
Semicolon ";"
Let "let"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
LBrace "{"
Word "value"
RBrace "}"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
Equals "="
Word "boxed"
Semicolon ";"
Word "value"
Dot "."
Word "length"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "GenericTypePatternQualifiedMatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "boxed"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
Pipe "|"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
Equals "="
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
IntegerLiteral "50"
RBrace "}"
Semicolon ";"
Match "match"
LParen "("
Word "boxed"
RParen ")"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
FatArrow "=>"
IntegerLiteral "0"
Comma ","
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
FatArrow "=>"
IntegerLiteral "50"
RBrace "}"
RBrace "}"
Function "function"
Word "GenericTypePatternNamespaceQualifiedMatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "boxed"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
Pipe "|"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
Equals "="
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
Quote "\""
Word "ready"
Quote "\""
RBrace "}"
Semicolon ";"
Match "match"
LParen "("
Word "boxed"
RParen ")"
LBrace "{"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
FatArrow "=>"
IntegerLiteral "0"
Comma ","
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
FatArrow "=>"
IntegerLiteral "51"
RBrace "}"
RBrace "}"
Function "function"
Word "DeepGenericDestructureQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
Less "<"
Word "int"
Greater ">"
Equals "="
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
Less "<"
Word "int"
Greater ">"
LBrace "{"
Word "inner"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "int"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
IntegerLiteral "52"
RBrace "}"
RBrace "}"
Semicolon ";"
Let "let"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
LBrace "{"
Word "inner"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
LBrace "{"
Word "value"
RBrace "}"
RBrace "}"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
Less "<"
Word "int"
Greater ">"
Equals "="
Word "outer"
Semicolon ";"
Word "value"
RBrace "}"
Function "function"
Word "DeepGenericDestructureNamespaceQualifiedLet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
Less "<"
Word "string"
Greater ">"
Equals "="
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
Less "<"
Word "string"
Greater ">"
LBrace "{"
Word "inner"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
Less "<"
Word "string"
Greater ">"
LBrace "{"
Word "value"
Colon ":"
Quote "\""
Word "done"
Quote "\""
RBrace "}"
RBrace "}"
Semicolon ";"
Let "let"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
LBrace "{"
Word "inner"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Box"
LBrace "{"
Word "value"
RBrace "}"
RBrace "}"
Colon ":"
Word "llm"
Dot "."
Word "openai"
Dot "."
Word "Outer"
Less "<"
Word "string"
Greater ">"
Equals "="
Word "outer"
Semicolon ";"
Word "value"
Dot "."
Word "length"
LParen "("
RParen ")"
RBrace "}"
