baml_language/crates/baml_tests/snapshots/compiles/patterns_class_destructure_namespaces/baml_tests__compiles__patterns_class_destructure_namespaces__01_lexer__ns_llm_ns_openai_models.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Class "class"
Word "Response"
LBrace "{"
Word "text"
Word "string"
Word "score"
Word "int"
RBrace "}"
Class "class"
Word "Box"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "value"
Word "T"
RBrace "}"
Class "class"
Word "Outer"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "inner"
Word "Box"
Less "<"
Word "T"
Greater ">"
RBrace "}"
Function "function"
Word "DestructureBareInNamespace"
LParen "("
Word "response"
Colon ":"
Word "Response"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "Response"
LBrace "{"
Word "score"
RBrace "}"
Equals "="
Word "response"
Semicolon ";"
Word "score"
RBrace "}"
